--- a/resources/style.css
+++ b/resources/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: 'Oswald', sans-serif;
     box-sizing: border-box;
+    transition: .1s;
 }
 
 a {
@@ -100,4 +101,15 @@ h4 {
 
 .block .center {
     margin: 30px 0 0;
+}
+
+/* THIRD ONE */
+.third_one {
+    display: flex;
+    padding: 0 10% 90px;
+
+}
+
+.third_one img {
+    width: 19%;
 }
