--- a/resources/style.css
+++ b/resources/style.css
@@ -105,11 +105,34 @@ h4 {
 
 /* THIRD ONE */
 .third_one {
-    display: flex;
     padding: 0 10% 90px;
 
 }
 
+.gallery {
+    display: flex;
+    padding: 90px 10%;
+
+}
+
+.third_one a{
+    width: fit-content;
+}
+
+#h4_text {
+    margin: 30px 0 15px;
+}
+
 .third_one img {
     width: 19%;
+    margin-right: 60px;
+    border: 1px solid #333333;
+}
+
+.buttons {
+    margin-top: 60px;
+}
+
+.buttons button {
+    padding: 10px 30px;
 }
