--- a/resources/style.css
+++ b/resources/style.css
@@ -35,10 +35,14 @@ h4 {
 }
 
 .light {
-    font-weight: 400;
-    color: #393f3f;
+    font-weight: 300;
+    color: #2f3636;
+    letter-spacing: 1px;
 }
 
+.white {
+    color: white;
+}
 /* BODY */
 body {
     
@@ -170,13 +174,21 @@ body {
 }
 
 .block .center {
-    margin: 30px 0 0;
+    margin-top: 40px;
+}
+
+.block h2, .block h3 {
+    /* margin-bottom: 5px; */
 }
 
 
 @media only screen and (max-width: 950px) {
     .block  {
         padding: 60px;
+    }
+
+    .block  {
+        border-radius: 40px;
     }
 }
 
@@ -188,7 +200,7 @@ body {
     
     .block  {
         padding: 60px 5%;
-        border-radius: 60px;
+        border-radius: 30px;
     }
 }
 
@@ -259,28 +271,31 @@ body {
     padding: 10px 30px;
 }
 
+
+
 /* FORTh ONE */
 .forth_one {
     width: 100%;
     background-color: #333333;
-    
 }
 
 .contacts {
     margin: 0 auto;
     max-width: 1320px;
-    padding: 90px 60px 120px;
+    /* padding: 90px 60px 120px; */
+    padding: 60px;
 }
 
 .list_of_contacts {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 .list {
     display: flex;
+    align-items: center;
 }
 
 .email {
@@ -289,20 +304,60 @@ body {
 
 .email h3 {
     color: #EBEBEB;
-    padding: 15px 60px;
+    padding: 10px 30px;
+    /* padding: 15px 60px; */
     border-radius: 50px;
     border: 1px solid #EBEBEB;
 }
 
 .icon i{
-    font-size: 67px;
+    font-size: 45px;
+    /* font-size: 67px; */
     color: #EBEBEB;
 }
 
+.icon i:hover {
+    color: #8EC286;
+}
+
 .icon_center {
-    margin: 0 15px;
+    margin: 0 9px;
 }
 
 .forth_one h2 {
     color: white;
+}
+
+a.white {
+    color: #ADADAD;
+    text-decoration: underline;
+}
+
+a.white:hover {
+    color: #8EC286;
+    text-decoration: none;
+}
+
+
+@media only screen and (max-width: 700px) {
+    .list_of_contacts {
+        display: block;
+        margin-top: 30px;
+    }
+
+    .list {
+        display: block;
+    }
+
+    .contacts {
+        width: fit-content;
+        /* justify-content: start; */
+        margin: 0;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .contacts {
+        padding: 5%;
+    }
 }
