--- a/resources/style.css
+++ b/resources/style.css
@@ -12,7 +12,7 @@ a {
 
 h1 {
     font-size: 100px;
-    line-height: 100px;
+    line-height: 90px;
     letter-spacing: 4px;
 }
 
@@ -36,7 +36,8 @@ h4 {
 
 .light {
     font-weight: 300;
-    color: #2f3636;
+    color: black;
+    /* color: #2f3636; */
     letter-spacing: 1px;
 }
 
@@ -112,8 +113,8 @@ body {
 }
 
 .first_one img {
-    width: 356px;
-    border-radius: 90px;
+    width: 300px;
+    border-radius: 60px;
     margin-right: 30px;
 }
 
@@ -170,7 +171,7 @@ body {
 .block {
     background-color: #DEFFD9;
     padding: 90px;
-    border-radius: 90px;
+    border-radius: 60px;
 }
 
 .block .center {
@@ -207,20 +208,27 @@ body {
 
 
 /* THIRD ONE */
+
+
 .third_one {
-    padding: 0 15% 90px;
+    /* padding: 0  90px; */
 }
 
 .gallery {
     display: flex;
     justify-content: space-between;
-    padding: 90px 10%;
-
+    padding: 60px 60px 0;
+    margin: 0 auto;
+    max-width: 1320px;
 }
 
 .third_one a{
     text-decoration: underline;
     color: #333333;
+}
+
+.third_one .right {
+    padding-top: 15px;
 }
 
 .third_one a:hover {
@@ -229,14 +237,37 @@ body {
 }
 
 #h4_text {
-    margin: 30px 90px 15px 0;
+    margin: 15px 90px 15px 0;
 }
 
 .third_one img {
-    width: 19%;
-    margin-left: 60px;
-    border: 1px solid #333333;
+    width: 300px;
+    height: 100%;
+    margin-right: 30px;
+    border: 1px solid #17640A;
     transition: 3s;
+    box-shadow: 5px 5px black;
+    border-radius: 30px;
+}
+
+@media only screen and (max-width: 950px) {
+    .gallery {
+        display: block;
+    }
+
+    .gallery img {
+        width: 200px;
+    }
+
+    #h4_text {
+        margin: 15px 0 15px 0;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .gallery {
+        padding: 60px 5% 0;
+    }
 }
 
 /* .third_one img::before {
@@ -263,20 +294,13 @@ body {
     justify-content: flex-start;
   } */
 
-.buttons {
-    margin-top: 30px;
-}
-
-.buttons button {
-    padding: 10px 30px;
-}
-
 
 
 /* FORTh ONE */
 .forth_one {
     width: 100%;
     background-color: #333333;
+    margin-top: 60px;
 }
 
 .contacts {
