--- a/resources/style.css
+++ b/resources/style.css
@@ -11,8 +11,8 @@ a {
 }
 
 h1 {
-    font-size: 100px;
-    line-height: 90px;
+    font-size: 80px;
+    line-height: 70px;
     letter-spacing: 4px;
 }
 
@@ -64,7 +64,7 @@ body {
 }
 
 .logo {
-    color: #333333;
+    color: #202020;
 }
 
 .logo:hover {
@@ -109,19 +109,19 @@ body {
 
     margin: 0 auto;
     max-width: 1320px;
-    padding: 290px 60px 30px;
+    padding: 280px 60px 120px;
 }
 
 .first_one img {
-    width: 300px;
-    border-radius: 60px;
+    width: 230px;
+    border-radius: 150px;
     margin-right: 30px;
 }
 
 @media only screen and (max-width: 1320px) {
     .first_one img {
-        width: 240px;
-        border-radius: 60px;
+        /* width: 200px; */
+        /* border-radius: 60px; */
     }
 
     h1 {
@@ -133,7 +133,7 @@ body {
 @media only screen and (max-width: 1054px) {
     .first_one img {
         width: 200px;
-        border-radius: 50px;
+        /* border-radius: 50px; */
     }
 
     h1 {
@@ -169,9 +169,20 @@ body {
 }
 
 .block {
-    background-color: #DEFFD9;
-    padding: 90px;
-    border-radius: 60px;
+    /* background-color: #DEFFD9; */
+    padding: 60px 0;
+    /* border-radius: 60px; */
+}
+
+.second_one h3 {
+    margin-bottom: 15px;
+}
+
+.line {
+    background-color: #D9D9D9;
+    max-width: 1200px;
+    padding: 0 60px;
+    margin: 0 auto;
 }
 
 .block .center {
@@ -217,7 +228,7 @@ body {
 .gallery {
     display: flex;
     justify-content: space-between;
-    padding: 60px 60px 0;
+    padding: 120px 60px 60px;
     margin: 0 auto;
     max-width: 1320px;
 }
@@ -237,17 +248,17 @@ body {
 }
 
 #h4_text {
-    margin: 15px 90px 15px 0;
+    margin: 15px 0;
 }
 
 .third_one img {
-    width: 300px;
+    width: 200px;
     height: 100%;
-    margin-right: 30px;
-    border: 1px solid #17640A;
-    transition: 3s;
-    box-shadow: 5px 5px black;
-    border-radius: 30px;
+    margin-right: 60px;
+}
+
+.third_one .right {
+    padding-top: 60px;
 }
 
 @media only screen and (max-width: 950px) {
@@ -299,7 +310,7 @@ body {
 /* FORTh ONE */
 .forth_one {
     width: 100%;
-    background-color: #333333;
+    background-color: #202020;
     margin-top: 60px;
 }
 
@@ -324,18 +335,35 @@ body {
 
 .email {
     margin-right: 30px;
+    display: flex;
+    align-items: center;
 }
 
 .email h3 {
     color: #EBEBEB;
-    padding: 10px 30px;
-    /* padding: 15px 60px; */
-    border-radius: 50px;
-    border: 1px solid #EBEBEB;
+}
+
+.email img {
+    width: 60px;
+    margin-right: 15px;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+}
+
+.icon.center {
+    margin: 0 30px;
+}
+
+.icons {
+    display: flex;
 }
 
 .icon i{
     font-size: 45px;
+    margin-right: 15px;
     /* font-size: 67px; */
     color: #EBEBEB;
 }
