--- a/resources/style.css
+++ b/resources/style.css
@@ -107,6 +107,12 @@ header {
     background-color: #8EC286;
 }
 
+@media only screen and (max-width: 650px) {
+    .button {
+        padding: 5px 11px;
+    }
+}
+
 /* FIRST_ONE */
 .first_one {
     display: flex;
@@ -210,6 +216,11 @@ header {
     /* margin-bottom: 5px; */
 }
 
+.icons_block img {
+    height: 45px;
+    margin-right: 15px;
+}
+
 @media only screen and (max-width: 1320px) {
     .line {
         margin: 0 5%;
@@ -245,6 +256,12 @@ header {
 
     .line {
         margin: 0 5%;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .icons_block img {
+        height: 30px;
     }
 }
 
@@ -399,7 +416,7 @@ header {
 }
 
 .email img {
-    width: 60px;
+    width: 45px;
     margin-right: 15px;
 }
 
@@ -505,4 +522,15 @@ a.white:hover {
     .contacts {
         padding: 5%;
     }
+}
+
+@media only screen and (max-width: 350px) {
+    .email img {
+        width: 30px;
+    }
+
+    .icon i{
+        font-size: 30px;
+    }
+
 }
