--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Oswald', sans-serif;
+    /* font-family: 'Oswald', sans-serif; */
+    font-family: 'Comfortaa', cursive;
     box-sizing: border-box;
     transition: .1s;
 }
@@ -11,12 +12,15 @@ a {
 }
 
 h1 {
+    font-family: 'IBM Plex Mono', monospace;
     font-size: 80px;
     line-height: 70px;
     letter-spacing: 4px;
 }
 
 h2 {
+    font-family: 'IBM Plex Mono', monospace;
+
     font-size: 2em;
 }
 
@@ -27,6 +31,10 @@ h3 {
 h4 {
     font-size: 1.25em;
     /* font-size: 25px; */
+}
+
+h2,h3,h4,h1 {
+    letter-spacing: 1px;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -99,7 +107,7 @@ header {
 .button {
     color: white;
     background-color: #202020;
-    padding: 11px 45px;
+    padding: 11px 20px;
 }
 
 .button:hover {
@@ -199,6 +207,7 @@ header {
 
 .second_one h3 {
     margin-bottom: 15px;
+    margin-top: 10px;
 }
 
 .line {
