--- a/resources/style.css
+++ b/resources/style.css
@@ -35,6 +35,7 @@ h4 {
 
 h2,h3,h4,h1 {
     letter-spacing: 1px;
+    color: #2B3149;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -56,8 +57,8 @@ h2,h3,h4,h1 {
 
 .light {
     font-weight: 300;
-    color: black;
-    /* color: #2f3636; */
+    /* color: black; */
+    /* color: #2B3149; */
     letter-spacing: 1px;
 }
 
@@ -96,23 +97,23 @@ header {
 }
 
 .logo {
-    color: #202020;
+    color: #2B3149;
 }
 
 .logo:hover {
-    color: #8EC286;
+    color: #FF9571;
 }
 
 
 .button {
     color: white;
-    background-color: #202020;
+    background-color: #2B3149;
     padding: 11px 20px;
 }
 
 .button:hover {
     color: #202020;
-    background-color: #8EC286;
+    background-color: #FF9571;
 }
 
 @media only screen and (max-width: 650px) {
@@ -293,7 +294,7 @@ header {
 
 .third_one a{
     text-decoration: underline;
-    color: #333333;
+    color: #2B3149;
 }
 
 .third_one .right {
@@ -302,7 +303,7 @@ header {
 
 .third_one a:hover {
     text-decoration: none;
-    color: #8EC286;
+    color: #FF9571;
 }
 
 #h4_text {
@@ -432,6 +433,8 @@ header {
 .icon {
     display: flex;
     align-items: center;
+    color: #EBEBEB;
+
 }
 
 .icon.center {
@@ -446,11 +449,10 @@ header {
     font-size: 45px;
     margin-right: 15px;
     /* font-size: 67px; */
-    color: #EBEBEB;
 }
 
-.icon i:hover {
-    color: #8EC286;
+.icon:hover {
+    color: #FF9571;
 }
 
 .icon_center {
@@ -467,7 +469,7 @@ a.white {
 }
 
 a.white:hover {
-    color: #8EC286;
+    color: #FF9571;
     text-decoration: none;
 }
 
